examples/lgtm-testing/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lgtm-testing
  labels:
    app.kubernetes.io/part-of: lgtm-testing
